k8s/ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ns-geo-distribution
  labels:
    name: ns-geo-distribution
