k8s/UAE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-geo-distribution
  name: deploy-uae
  labels:
    app: uae
spec:
  # Clean up "Replica Sets" when updating deployments, revisionHistoryLimit => Default to 10 if not specified
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: uae
  replicas: 2
  template:
    metadata:
      labels:
        app: uae
    spec:
      containers:
      - name: uae
        image:  khaledalam/k8s-gcp-geo-distribution:v1.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns-geo-distribution
  name: srv-uae
spec:
  selector:
    app: uae
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
