k8s/US.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-us
  namespace: ns-geo-distribution
  labels:
    app: us
spec:
  # Clean up "Replica Sets" when updating deployments, revisionHistoryLimit => Default to 10 if not specified
  revisionHistoryLimit: 0 
  selector:
    matchLabels:
      app: us
  replicas: 2
  template:
    metadata:
      labels:
        app: us
    spec:
      containers:
      - name: us
        image:  khaledalam/k8s-gcp-geo-distribution:v1.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns-geo-distribution
  name: srv-us
spec:
  selector:
    app: us
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
