k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-geo-distribution
  name: ing-geo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s-ingress-url.com
    http:
      paths:
      - path: /us
        pathType: Prefix
        backend:
          service:
            name: service-us
            port:
              number: 80
      - path: /uae
        pathType: Prefix
        backend:
          service:
            name: service-uae
            port:
              number: 80
